@@ -1,3 +1,7 @@
+2010-05-19  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (gdb-tooltip-hook): Add for auto enable/disable gud-tooltip-mode.
+
 2010-05-18  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (window-system): In terminal, whitespace-mode
